# $Id$

2006-04-12	Konstantin V. Arkhipov

	* core/Form/PrimitiveDate.class.php: complexity detection fixed.

	* core/Form/FormUtils.class.php: forced usage of single import for
	complex primitives.

2006-04-11	Anton E. Lebedevich

	* main/Containers/UnifiedContainer.class.php: one more evil typo
	fixed, propagated from 0.2.

2006-04-11	Konstantin V. Arkhipov

	* core/DB/DBFactory.class.php: introduced ability to specify
	conntector's type for custom connections.
	
	* core/Base/Creatable.class.php: deprecated.
	
	* meta/: removed support for Creatable interface.

2006-04-09	Konstantin V. Arkhipov

	* 0.4.1 released.

2006-04-06	Konstantin V. Arkhipov

	* core/Base/Instantiatable.class.php: new grouping interface
	introduced.

	* core/DB/: dialects are now singletones.

	* core/OSQL/QueryIdentification.class.php: Stringable dependency moved
	to Query interface in the sake of debug pleasure.

2006-04-05	Konstantin V. Arkhipov

	* meta/: integer's Range support implemented.

	* core/OSQL/InsertOrUpdateQuery.class.php: added Range support in
	lazySet.

2006-04-05	Anton E. Lebedevich

	* main/Containers/UnifiedContainer.class.php: 1489 propagated to
	trunk.
	* main/Utils/DebugUtils.class.php: added.
	* core/OSQL/InsertOrUpdateQuery.class.php: added Timestamp support in
	lazySet.

2006-04-03	Konstantin V. Arkhipov

	* 0.4.0 released.

2006-04-02	Konstantin V. Arkhipov

	* meta/: correct boolean-type handling implemented and minor typos
	fixed.

	* core/Base/Enumeration.class.php: getObjectList() introduced as
	alternative to static getList().

2006-04-01	Konstantin V. Arkhipov

	* doc/www/: site updated to new design and layout.

	* main/Base/Range.class.php: implementation simplified a bit wrt
	swapAllowed-logic removal.

	* main/Containers/UnifiedContainer.class.php: API changed a bit -
	setListWithClones() -> replaceList(); once again refixed save logic.

	* meta/: support for OneToMany and ManyToMany relations implemented.

2006-03-30	Konstantin V. Arkhipov
